OO-3339: reimplement correction workflow in assessment tool for QTI 2.1